# hot-dog

./: Cargo.toml
src/: lib.rs  main.rs
src/backend/: server.rs
src/components/: components.rs  mod.rs  server.rs
src/frontend/: dog_api.rs  dog_view.rs  favorites.rs  mod.rs  nav.rs
